chore: 미사용 BookStateEnum 클래스 삭제